# quantum_bands_ai_project

./: .env.example  .gitignore  Dockerfile  deploy.bat  deploylocal.bat  pyproject.toml
.github/workflows/: cicd.yml
app/: main.py
app/core/: config.py  db.py
